Fixed Firefox layout issues

--- a/assets/styles/layout/_768.scss
+++ b/assets/styles/layout/_768.scss
@@ -2,7 +2,7 @@
     width: 20%;
     -ms-flex: 0 20%;
     @include box-flex(0);
-    padding:2em 2% 0 5%;
+    padding:2em 2.5em 0 5em;
 }
 .main {
     -ms-flex: 1;
