--- a/assets/styles/layout/_base.scss
+++ b/assets/styles/layout/_base.scss
@@ -3,6 +3,7 @@ html,body {
 }
 #main-container {
     height:100%;
+    width:100%;
     display: -ms-flexbox;
     display: -webkit-box;
     display: -moz-box;
